--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ pyyaml
 streamlit_authenticator
 plotly.express
 git+https://github.com/streamlit/gsheets-connection
-st-gsheets-connection
+streamlit_gsheets==0.0.1
